test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/starchat/mutants/5/result.txt
./test/mutation_analysis/s0357_count_numbers_with_unique_digits/hafis/starchat/mutants/5/Solution.java:26: error: unreachable statement
            for (int j = 1; false; j++) {
                                        ^
1 error
